fix navbar overlap page

--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ body {
 
 nav {
     display: flex;
-    padding: 1.5rem 0;
+    padding: 1rem 2rem;
     background-color: rgba(0, 128, 0);
     width: 100%;
     position: fixed;
     z-index: 100;
-    border-bottom: 10px solid rgb(255, 255, 255);
+    border-bottom: 5px solid rgb(255, 255, 255);
 }
 
 .brand {
@@ -79,7 +79,6 @@ h1 {
 .about-img {
     font-size: 10px;
     margin-left: -3rem;
-    box-shadow: ack 2px;
 }
 
 .about {
@@ -94,7 +93,6 @@ h1 {
     background-color: green;
     height: 500px;
     color: white;
-    padding: 4rem;
 }
 
 #reasons header {
@@ -108,6 +106,7 @@ h1 {
 }
 
 .list-item {
+    padding: 0 4rem;
     display: flex;
     gap: 40px;
 }
@@ -168,6 +167,7 @@ h1 {
 #contact {
     background-color: green;
     height: 700px;
+    border-bottom: 1rem solid white;
 }
 
 .header-con {
